--- a/src/main/resources/static/static/home/home.html
+++ b/src/main/resources/static/static/home/home.html
@@ -2,12 +2,13 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>홈</title>
+    <title>File Upload</title>
 </head>
 <body>
-
-<p>홈이요</p>
-<p>static resource 테스트 페이지</p>
-
+<h1>파일 업로드 (Form Submit 방식)</h1>
+<form method="post" action="/upload" enctype="multipart/form-data">
+    <input type="file" name="file" />
+    <button type="submit">업로드</button>
+</form>
 </body>
 </html>
